0026127: Visualization - Default camera is not copied in copy constructor of V3d_View

V3d_View copy constructor now copies DefaultCamera() from specified View.
Draw Harness command vinit - added new argument -cloneActive.